fix horizontal scroll in our work page

--- a/src/components/Pages/OurWork/OurWork.styles.scss
+++ b/src/components/Pages/OurWork/OurWork.styles.scss
@@ -19,7 +19,7 @@
 
 .work-container--content {
   margin: 5vw;
-  width: 95vw;
+  width: auto;
   margin-top: 0;
   display: grid;
 
